--- a/snippets/footer-index2.liquid
+++ b/snippets/footer-index2.liquid
@@ -156,8 +156,8 @@
 </div>
 <script>
   var names = [
-    "Haydee", "Anthony", "Laurine", "Ronald", "Jo", "Elliot", "Harriette", "Cristin", "Chad", "Jolynn", "Kum", "Cherish", "Felicitas", "Abbey", "Pamella", "Harry", "Clarice", "Lois", "Eugena", "Ivey", "Karlyn", "Evonne", "Isabel", "Aurea", "Hollis", "Linda", "Jamila", "Rose", "Dimple", "George", "Everett", "Lakeshia", "Benton", "Bennie", "Yen", "Lien", "Laraine", "Eufemia", "Lucile", "Walker", "Clare", "Tammie", "Brendan", "Hillary", "Meggan", "Norma", "Federico", "Bernard", "Rochell", "Ford",
-    "Alex", "Dane", "Rachel", "Joe", "Johnsie", "Amy", "Elly", "Floyd", "Chandra", "Dom", "Jenise", "Maureen", "Laura", "Darryl", "Miranda", "Justin", "Lucrecia", "Renita", "Sophia", "Robert", "Carline", "Sarah", "Marry", "Bernadine", "Meg", "Larry", "Nicolas", "Libbie", "Blanca", "Ashton", "Teresa", "Mack", "Bailey", "Cherise", "Breana", "Milan", "Shandi", "Thomas", "Shantae", "Jerry", "Christene", "Cristopher", "Irving", "Stephenie", "Eve", "Luna", "Garth", "Neville", "Theda", "Sarah"
+    "Haydee", "Anthony", "Lauren", "Ronald", "Joe", "Elliot", "Harry", "Cristine", "Chad", "Jolie", "Mary", "Charlie", "Jane", "Abbey", "Pamella", "Harry", "Carmen", "Lois", "Eugene", "Ivey", "Martin", "Evette", "Isabel", "Audrey", "Holly", "Linda", "James", "Rose", "Courtney", "George", "Everett", "Randy", "Ben", "Bennie", "Wayne", "Tom", "Max", "Brett", "Jordan", "Walker", "Clare", "Tammie", "Brendan", "Mason", "Meggan", "Norma", "Fred", "Bernard", "Nancy", "Ford",
+    "Alex", "Dane", "Rachel", "Joe", "John", "Amy", "Elly", "Floyd", "Carla", "Dom", "Denise", "Maureen", "Laura", "Darryl", "Miranda", "Justin", "Tony", "Ray", "Sophia", "Robert", "Carline", "Sarah", "Marry", "Tom", "Megan", "Larry", "Nicolas", "Jim", "Bianca", "Ashton", "Alison", "Mack", "Bailey", "Carlos", "Breana", "Miles", "Sheryl", "Thomas", "Andrea", "Jerry", "Christene", "Cristopher", "Irving", "Stephenie", "Eve", "Luna", "Garth", "Neville", "Steve", "Sarah"
   ];
   var cities = ["New York",
  "Los Angeles",
