pay invoice page

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -153,6 +153,6 @@
     $(this).data('oldVal', q)
 
 
-    $(".price").html("$" + newGrandTotal + ".00");
+    $("#subtotal .price, #grandtotal .price").html("$" + newGrandTotal + ".00");
   });
 </script>
