--- a/templates/page.find-your-face.liquid
+++ b/templates/page.find-your-face.liquid
@@ -313,11 +313,11 @@
 
       <!-- SM-LG -->
       <h1 class="hidden-xs">Check out our product pages to purchase.</h1>
-      <h3 class="hidden-xs"><span class="small-caps"><strong>15%</strong> off any purchase, ends soon! Use discount code:</span> <code>foundit</code></h3>
+<!--       <h3 class="hidden-xs"><span class="small-caps"><strong>15%</strong> off any purchase, ends soon! Use discount code:</span> <code>foundit</code></h3> -->
 
       <!-- XS -->
       <h4 class="visible-xs">Check out our product pages to purchase.</h4>
-      <h6 class="visible-xs"><span class="small-caps"><strong>15%</strong> off any purchase, ends soon! Use discount code:</span> <code>foundit</code></h6>
+<!--       <h6 class="visible-xs"><span class="small-caps"><strong>15%</strong> off any purchase, ends soon! Use discount code:</span> <code>foundit</code></h6> -->
       <hr class="highlight">
 
       <div class="text-center full-w">
