--- a/snippets/footer-index2.liquid
+++ b/snippets/footer-index2.liquid
@@ -150,7 +150,7 @@
 </footer>
 <!-- <a href="#" class="scroll_top" title="Scroll to Top" style="display: block;"><i class="fa fa-arrow-up"></i></a> -->
 <div id="recent-buy" class="col-sm-3 col-xs-6 well sharp no-margin" style="opacity: 0;">
-  <h5><strong><span class="name"></span></strong> in <strong><span class="city"></span></strong> just purchased:</h5>
+  <h5><strong><span class="name"></span></strong> in <strong><span class="city"></span></strong> recently purchased:</h5>
   <h3 class="small-caps model"></h3>
   <img src="" alt="">
 </div>
@@ -210,7 +210,7 @@
   var models = [{% for product in collections.all.products %}{% if product.available %}["{{ product.title }}", "{{ product.images[0].src | img_url }}"],{% endif %}{% endfor %}];
   $(document).ready(function() {
                 {% if page_title contains 'All' or page_title contains 'Changing ' %}
-      sleep(7000).then(function() {
+      sleep(8000).then(function() {
         var $div = $("#recent-buy");
         var model = models[Math.floor(Math.random()*models.length)];
         $div.find(".model").html(model[0]);
