last day new years deal

--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -183,14 +183,14 @@
 
 <!-- Not Mobile -->
 <div class="hidden-xs text-center sale-section">
-  <h2><span class="small-caps">Ends in 5 days! Use Code:</span> <code>eoysale</code></h2>
+  <h2><span class="small-caps">Ends tonight! Use Code:</span> <code>eoysale</code></h2>
   <h1 class="home-collection">10% OFF ANY ORDER</h1>
   <h2><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h2>
 </div>
 
 <!-- Mobile -->
 <div class="visible-xs text-center sale-section">
-  <h4><span class="small-caps">Ends in 5 days! Use Code:</span> <code>eoysale</code></h4>
+  <h4><span class="small-caps">Ends tonight! Use Code:</span> <code>eoysale</code></h4>
   <h1 class="home-collection">10% OFF ANY ORDER</h1>
   <h3><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h3>
 </div>
