--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -77,7 +77,7 @@
           <span class="h4 small-caps"><strong>Free Shipping</strong></span>
           <span class="small-caps"><small>(US & Canada)</small></span>
           <br />
-          <p class="no-margin"><span class="small-caps">Ends Soon! Use Code:</span> <code>eoysale</code></p>
+          <p class="no-margin"><span class="small-caps">Ends tonight! Use Code:</span> <code>eoysale</code></p>
           <h6>10% OFF ANY ORDER<h/6>
           
           <hr />
