--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -183,14 +183,14 @@
 
 <!-- Not Mobile -->
 <div class="hidden-xs text-center sale-section">
-  <h2><span class="small-caps">Ends tonight! Use Code:</span> <code>eoysale</code></h2>
+  <h2><span class="small-caps">January Kickoff Sale! Use Code:</span> <code>anewyear</code></h2>
   <h1 class="home-collection">10% OFF ANY ORDER</h1>
   <h2><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h2>
 </div>
 
 <!-- Mobile -->
 <div class="visible-xs text-center sale-section">
-  <h4><span class="small-caps">Ends tonight! Use Code:</span> <code>eoysale</code></h4>
+  <h4><span class="small-caps">January Kickoff Sale! Use Code:</span> <code>anewyear</code></h4>
   <h1 class="home-collection">10% OFF ANY ORDER</h1>
   <h3><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h3>
 </div>
@@ -329,7 +329,7 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
 //         wH = $(window).height(),
 //         wS = $(this).scrollTop();
 //     if (wS > (hT+hH-wH-350)){
-      $('.odometer').html(3204);
+      $('.odometer').html(3211);
 //     }
   });
 </script>
