--- a/templates/page.pay-invoice.liquid
+++ b/templates/page.pay-invoice.liquid
@@ -44,7 +44,7 @@
   function addPayment(qty) {
     var prodId = $('#prod').attr('data-id');
     $.ajax({
-      url: 'https://fello-eyewear.myshopify.com/cart/add.js',
+      url: 'https://www.felloeyewear.com/cart/add.js',
       method: 'POST',
       data: {
         id : prodId,
