--- a/snippets/header8.liquid
+++ b/snippets/header8.liquid
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div id="header-ontop" class="is-sticky"></div>
-<header id="header" class="header style3 style4" style="margin-top: 50px;">
+<header id="header" class="header style3 style4" style="{% unless handle contains 'pay-invoice' %}margin-top: 50px;{% endunless %}">
   <div class="top-header">
     <div class="inner">
       <div class="main-menu-wapper">
