minor banner / count change

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -68,7 +68,7 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
       <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.</p>
-      <p class="v-center">January Kickoff Sale! <span style="border-bottom: 1px solid black;">10% off all products.</span></p>
+      <p class="v-center">Kickoff Sale! <span style="border-bottom: 1px solid black;">10% off all products.</span></p>
     </small>
   </div>
   {% endunless %}
