--- a/assets/viewer.scss
+++ b/assets/viewer.scss
@@ -1,14 +1,17 @@
 #views li {
   cursor: pointer;
 }
+#views .navbar-default .navbar-nav > .active > a {
+  background-color: rgba(74, 64, 64, 0.5);
+}
 #viewer-container .navbar-default {
   background-color: transparent;
   border: none;
   border-left: 1px solid black;
 }
 #viewer-container {
-  height: 500px;
-  border-top: 1px solid #e7e7e7;
+  height: 540px;
+  border-top: 1px solid black;
   margin-bottom: 175px;
   position: relative;
 }
@@ -20,16 +23,11 @@
   width: 50px;
 }
 #toggler li a {
-  -webkit-border-radius: 0 !important;
-  -moz-border-radius: 0 !important;
-  -ms-border-radius: 0 !important;
-  -o-border-radius: 0 !important;
-  border-radius: 0 !important;
   cursor: pointer;
 }
 #toggler {
   height: 15%;
-  margin-top: 30px;
+  margin-top: -50px;
 }
 #toggler .nav-pills {
   display: flex;
@@ -53,12 +51,36 @@
   background-color: transparent;
   border-bottom: 3px solid #1fa7d6;
 }
+#toggler > a {
+  display: flex;
+  border: 2px solid #1fa7d6;
+  margin: auto;
+  text-align: center;
+  width: 18%;
+  cursor: pointer;
+  position: relative;
+  bottom: 25px;
+  background-color: #e9f6fb;
+  font-variant: small-caps;
+}
+#toggler > a:hover {
+  background-color: #1fa7d6;
+  -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+#toggler > a h3 {
+  position: relative;
+  top: 1px;
+  margin: auto;
+}
 #viewer-container .empty {
   opacity: 0;
   display: none;
 }
 #viewer {
-  height: 100%;
+  // height: 100%;
+  height: auto;
 }
 .view-holder {
   height: 85%;
@@ -153,7 +175,10 @@
 #viewer-container .button-add-cart {
   text-transform: none !important;
   padding-top: 12px;
-  font-size: 18px;
+  font-size: 16px;
+}
+#viewer-container .button-add-cart:focus {
+  color: white;
 }
 #viewer-container .button-add-cart span {
   font-weight: 900;
@@ -161,9 +186,8 @@
 #cb-info .panel {
   border-top: 3px solid #1fa7d6 !important;
 }
-#fantom-bg {
-  // background-image: url('https://cdn.shopify.com/s/files/1/1321/8937/files/beach-bg-small.jpg');
-  background-image: url('https://cdn.shopify.com/s/files/1/1321/8937/files/snow-bg-small.jpg');
+#heron-bg, #konvoy-bg, #fantom-bg {
+  background-image: url('https://cdn.shopify.com/s/files/1/1321/8937/files/fashion-bw-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: 20%;
@@ -171,9 +195,6 @@
 div > .line-title {
   background-color: transparent;
   font-weight: bolder;
-}
-.cbtb .trust-badge.tab.bottom-left {
-  margin-left: 85%;
 }
 h6#disclaimer {
   background-color: #d4d4d4;
@@ -184,10 +205,99 @@ h6#disclaimer {
 }
 .blue.contact {
   text-align: center;
-  padding: 50px 0;
+  padding: 50px 30px;
   margin: 0 150px 70px 150px;
   background-color: #e9f6fb;
+  line-height: 1.7;
 }
 .blue.contact a {
   font-weight: bolder;
+}
+#cb-info.hidden-lg .panel, #cb-info.hidden-lg h1 {
+  float: none;
+  margin: auto;
+}
+#cb-info.hidden-lg .panel {
+  margin-bottom: 50px;
+}
+#cb-info.hidden-lg h1 {
+  margin-bottom: 20px;
+}
+#heron-wrap #add-specific a:last-of-type {
+  border-right: none !important;
+}
+.hidden-lg.prod-pointers .panel:first-of-type {
+  margin-top: 5%;
+}
+.hidden-lg.prod-pointers .panel .panel-body:hover {
+  background-color: #e9f6fb;
+}
+#size-guide {
+  width: 75%;
+}
+.dropdown-menu > li > a:hover {
+  background-color: black;
+}
+h1.jumbotron .dropdown {
+  display: inline;
+}
+h1.jumbotron .dropdown ul.dropdown-menu {
+  right: 0;
+  left: initial;
+  min-width: 350px;
+  padding: 15px 30px 85px 30px;
+}
+h1.jumbotron .open > .dropdown-menu {
+  display: flex;
+}
+h1.jumbotron .dropdown ul.dropdown-menu li > a {
+  width: 100%;
+  height: 100%;
+}
+h1.jumbotron .dropdown ul.dropdown-menu li > a.FT1-pattern:hover,
+h1.jumbotron .dropdown ul.dropdown-menu li > a.FBWC-pattern:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.FB1-pattern {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.FB1-pattern:hover {
+  background-color: black;
+}
+.FBWC-pattern {
+  background-image: url("https://cdn.shopify.com/s/files/1/1321/8937/files/lunar-o.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.FT1-pattern {
+  background-image: url("https://cdn.shopify.com/s/files/1/1321/8937/files/t-shell-o.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.viewer-head .dropdown-menu p {
+  margin: 8px -15px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 1;
+  color: black !important;
+}
+.viewer-head li.pe-7s-cart:before {
+  position: absolute;
+  margin: 17px;
+  font-weight: 900;
+  cursor: pointer;
+}
+.viewer-head li.pe-7s-cart {
+  width: 50px;
+  height: 50px;
+  margin: auto;
+}
+.viewer-head li:hover {
+  color: white;
+}
+.viewer-head li h4 {
+  text-align: center;
+  margin: 20px -150px;
+  border-top: 1px solid black;
+  padding-top: 10px;
 }
