--- a/templates/page.collaborations.liquid
+++ b/templates/page.collaborations.liquid
@@ -1,4 +1,15 @@
-{% assign cb_ids = '1 2 3' | split: ' ' %}
-{% assign model_name = 'Fantom' %}
-{% assign model_desc = 'The Fello Fantom Line' %}
-{% include 'product-line-view' with collections['fantom-model'].products %}
+<h1 class="text-center jumbotron section-header__title no-margin blue-bg">Work With Fello</h1>
+
+<div class="med-v-pads container">
+  <h2 class="text-center med-h-pads hidden-xs hidden-sm">
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
+  </h2>
+  
+  <h4 class="text-center med-h-pads visible-sm">
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
+  </h4>
+  
+  <p class="text-center med-h-pads visible-xs">
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
+  </p>
+</div>
