prepare for viewer

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -228,7 +228,7 @@ hr.highlight {
 /* Start Header */
 .site-banner {
   height: 50px;
-  background-color: #7cc2da;
+  background-color: #de514d;
   font-size: 17px;
   position: fixed;
   top: 0px;
