--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -62,14 +62,17 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
 
   {% unless handle contains 'pay-invoice' %}
   <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads">
-    <p class="v-center"><strong>FREE RETURNS</strong> on all purchases. Don't miss out on our January Kickoff deals, <span style="border-bottom: 1px solid black;">all products are on sale</span>.</p>
+    <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
+<!--       Get a pair by Valentine's Day,
+      <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>. -->
+    </p>
   </div>
   
   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
-    <small>
-      <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.</p>
-      <p class="v-center">Kickoff Sale! <span style="border-bottom: 1px solid black;">10% off all products.</span></p>
-    </small>
+<!--     <small> -->
+      <p class="v-center" style="margin-top: 10px;"><strong>FREE RETURNS</strong> on all purchases.</p>
+<!--       <p class="v-center"><small>Get one by Valentine's Day, <span style="border-bottom: 1px solid black;">10% off classics.</span></small></p> -->
+<!--     </small> -->
   </div>
   {% endunless %}
 
