--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -183,15 +183,15 @@
 
 <!-- Not Mobile -->
 <div class="hidden-xs text-center sale-section">
-  <h2><span class="small-caps">January Kickoff Sale! Use Code:</span> <code>anewyear</code></h2>
-  <h1 class="home-collection">10% OFF ANY ORDER</h1>
+<!--   <h2><span class="small-caps">Get a pair before Valentine's Day! Use Code:</span> <code>cupid</code></h2>
+  <h1 class="home-collection">10% Off All Classic Product Lines</h1> -->
   <h2><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h2>
 </div>
 
 <!-- Mobile -->
 <div class="visible-xs text-center sale-section">
-  <h4><span class="small-caps">January Kickoff Sale! Use Code:</span> <code>anewyear</code></h4>
-  <h1 class="home-collection">10% OFF ANY ORDER</h1>
+<!--   <h4><span class="small-caps">Get a pair before Valentine's Day! Use Code:</span> <code>cupid</code></h4>
+  <h1 class="home-collection">10% Off All Classic Product Lines</h1> -->
   <h3><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h3>
 </div>
 
@@ -256,7 +256,7 @@
 
   	{% include 'header2' with "Instagram" %}
 
-{% assign insta_products_top = "
+<!-- {% assign insta_products_top = "
   SI_Tortoise_Konvoy
   SI_Black_Konvoy 
   SI_Black_Fantom  
@@ -272,7 +272,7 @@
   SI_Tortoise_Fantom 
   SI_Black_Konvoy 
   SI_Tortoise_Konvoy 
-" | split: " " %}
+" | split: " " %} -->
 
 {% assign insta-classes = "banner-border primary col-xs-4 col-sm-2 no-pads quick-view" %}
 <!-- <div class="row no-margin">
@@ -329,7 +329,7 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
 //         wH = $(window).height(),
 //         wS = $(this).scrollTop();
 //     if (wS > (hT+hH-wH-350)){
-      $('.odometer').html(3236);
+      $('.odometer').html(3268);
 //     }
   });
 </script>
