approved for cb

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -60,7 +60,7 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
  </head>
 <body class="home {% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}" style="padding-right: 0;">
 
-  {% unless handle contains 'pay-invoice' or handle contains 'cb' %}
+  {% unless handle contains 'pay-invoice' or handle contains 'cb' or handle contains 'thank-you' %}
   <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads">
     <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
       Get ready for Spring, <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>.
