--- a/snippets/cb-panels.liquid
+++ b/snippets/cb-panels.liquid
@@ -43,10 +43,10 @@
       <div class="panel-body">
         <p class="col-xs-12 h5 justify">
           We ship all domestic and international orders with USPS.
-          All orders from the United States and Canada are FREE of charge.
-          All orders outside of the Unites States and Canada are a flat fee of $20.
-          Domstic orders take 2 - 3 days onces shipped and internal vary
-          and take upwards of 3 days.
+          All orders from the United States and Canada are $4.99.
+          All orders outside of the Unites States and Canada are a flat fee of $20. 
+          You will receive a tracking number within 24 hours, domestic orders 
+          take 2 - 3 days onces shipped and international varies and take upwards of 3 weeks.
         </p>
       </div>
     </div>
