--- a/snippets/cb-panels.liquid
+++ b/snippets/cb-panels.liquid
@@ -7,7 +7,7 @@
         <p class="col-xs-12 h5 justify">
 
           We want you to feel comfortable purchasing online,
-          so we allow a 30 day grace period to try on your pair
+          so we allow a 60 day grace period to try on your pair
           and decide if they are right for you!
           If you are unsatisfied, you can return them for a refund.
           Refund eligibility requires the glasses to be in the same condition
@@ -43,10 +43,10 @@
       <div class="panel-body">
         <p class="col-xs-12 h5 justify">
           We ship all domestic and international orders with USPS.
-          All orders from the United States and Canada are FREE of charge.
-          All orders outside of the Unites States and Canada are a flat fee of $20.
-          Domstic orders take 2 - 3 days onces shipped and internal vary
-          and take upwards of 3 days.
+          All orders from the United States and Canada are $4.99.
+          All orders outside of the Unites States and Canada are a flat fee of $20. 
+          You will receive a tracking number within 24 hours, domestic orders 
+          take 2 - 3 days onces shipped and international varies and take upwards of 3 weeks.
         </p>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <p class="col-xs-12 h5 justify">
 
           We want you to feel comfortable purchasing online,
-          so we allow a 30 day grace period to try on your pair
+          so we allow a 60 day grace period to try on your pair
           and decide if they are right for you!
           If you are unsatisfied, you can return them for a refund.
           Refund eligibility requires the glasses to be in the same condition
