--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -46,7 +46,7 @@
       <button class="cta-btn sharp btn btn-lg">
         <p class="h2">SHOP SUNGLASSES</p>
         <br>
-        <span class="h6" style="font-weight: 900;">and change a life</span>
+        <span class="h4" style="font-weight: 900;">and change a life</span>
       </button>
 
     </div>
@@ -68,7 +68,7 @@
   </div> -->
   
   <a href="/collections/all" title="shop" id="for-ios" class="hidden visible-xs">
-    <img class="full-w" src="{{ 'fello_eyewear_welcome.jpg' | asset_url }}" alt="Fello Eyewear">
+    <img class="full-w" src="{{ 'fello-eyewear-welcome.jpg' | file_url }}" alt="Fello Eyewear">
   </a>
 </div>
 
