--- a/snippets/bottom-scripts.liquid
+++ b/snippets/bottom-scripts.liquid
@@ -1,3 +1,4 @@
+  {% include 'google-fonts' %}
 
   {{ 'jquery.products.min.js' | asset_url | script_tag }}
   {{ 'api.jquery.js' | shopify_asset_url | script_tag }}
@@ -26,7 +27,6 @@
   {{ 'timber.js' | asset_url | script_tag  }}
   {{ 'theme.js' | asset_url | script_tag  }}
   {{ 'lookbook.js' | asset_url | script_tag  }}
-
 
   {{ 'boutique.js' | asset_url | script_tag }}
   {{ 'functions.js' | asset_url | script_tag }}
